Fix a bug where the post description would overflow the container

--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -141,6 +141,7 @@ body {
 
 .art-bg {
   background-color: #e1e1e1f7;
+  word-wrap: break-word;
 }
 
 .cm-bg {
